tests/lean/missing_import.lean.expected.out
missing_import.lean:1:0: error: file 'does/not/exist' not found in the LEAN_PATH
missing_import.lean:1:0: error: invalid import: does.not.exist
could not resolve import: does.not.exist
@[reducible]
def bitvec : ℕ → Type :=
λ (n : ℕ), tuple bool n
